# IA-PROY03-MLP

./: .gitignore  README.md  compile.txt  graphics.txt
src/: graphics.ipynb  imageProcessing.ipynb  imageProcessing.py  utils.py
src/data/output/results/: g1.csv  relu_128_1.csv  relu_128_2.csv  relu_128_3.csv  relu_128_4.csv  relu_16_1.csv  relu_16_2.csv  relu_16_3.csv  relu_16_4.csv  relu_32_1.csv  relu_32_2.csv  relu_32_3.csv  relu_32_4.csv  relu_64_1.csv  relu_64_2.csv  relu_64_3.csv  relu_64_4.csv  relu_8_1.csv  relu_8_2.csv  relu_8_3.csv  relu_8_4.csv  relu_model.csv
src/data/processing/: graphics.ipynb  imageProcessing.ipynb  utils.py
src/mlp/: CMakeLists.txt  Network.cpp  Network.h  main.cpp  utils.cpp
src/mlp/experiment/: MLPClassifier.cpp  MLPClassifier.h  NetworkReLU.cpp  NetworkReLU.h  NetworkTesting.h  Teebuf.h  data.h  dataset_utils.cpp  dataset_utils.h  input.cpp  input.h  train_test_split.cpp  train_test_split.h
src/mlp/layer/: DenseLayer.cpp  DenseLayer.h  Layer.h
src/mlp/layer/activation/: ActivationLayer.cpp  ActivationLayer.h  SigmoidLayer.h  SoftmaxLayer.cpp  SoftmaxLayer.h  TanhLayer.h
src/mlp/loss/: CrossEntropy.cpp  CrossEntropy.h  LossFunction.cpp  LossFunction.h  MSE.cpp  MSE.h
src/mlp/mlp/: Layer.h  Network.cpp  Network.h
src/mlp/mlp/activation/: Activation.h  ActivationLayer.cpp  ActivationLayer.h  ReLU.cpp  ReLU.h  ReluLayer.cpp  ReluLayer.h  Sigmoid.cpp  Sigmoid.h  SigmoidLayer.cpp  SigmoidLayer.h  SoftmaxLayer.cpp  SoftmaxLayer.h  Tanh.cpp  Tanh.h  TanhLayer.cpp  TanhLayer.h  activations.h
src/mlp/mlp/loss/: LossLayer.h  MSELoss.cpp  MSELoss.h  SoftmaxLoss.cpp  SoftmaxLoss.h  losses.h
src/mlp/mlp/math/: Matrix.cpp  Matrix.h  arrayfire_backend.cpp  arrayfire_backend.h  boost_backend.cpp  boost_backend.h  boost_math.h  math.h  mlp_math.h  pragma.h
src/mlp/mlp/net/: DenseLayer.cpp  DenseLayer.h  Network.cpp  Network.h  connected.h  nets.h
src/mlp/utils/: Utilities.cpp  Utilities.h
